Force commit by sync_github.sh

--- a/vimwiki/学习笔记/Python/Python学习笔记.wiki
+++ b/vimwiki/学习笔记/Python/Python学习笔记.wiki
@@ -13,6 +13,7 @@
 - [[字符串和数值转换|字符串转换和格式化]]
 - [[拷贝对象|浅拷贝和深拷贝]]
 - [[推导式生成器]]
+- [[迭代工具|迭代工具 - itertools]]
 - [[http://www.jb51.net/article/54911.htm|常用模块备忘]]
 - [[http://blog.jobbole.com/48541/|12种基础用例]]
 - [[http://blog.jobbole.com/63320/|30个实用小技巧]]
@@ -22,7 +23,7 @@
 - [[排列和组合]]
 - [[分组格式化]]
 - [[http://www.cnblogs.com/coderzh/archive/2010/04/27/python-cookbook33-Decorators.html|Decorators详解]]
-- [[http://www.admin10000.com/document/4268.html|高级数据结构]]
+- [[http://www.admin10000.com/document/4268.html|高级数据结构 - collections]]
 - [[http://www.admin10000.com/document/4035.html|Comprehensions、Decorators、ContextLib、Descriptors和MetaClasses]]
 - [[http://blog.jobbole.com/66097/|Iterators、Generators和itertools]]
 - [[http://blog.jobbole.com/66895/|Closures、Decorators和functools]]
